--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   flare_flutter: ^2.0.3
   flutter_slidable: ^0.5.4
+  flutter_easyrefresh: 2.0.4
+  extended_nested_scroll_view: 0.3.8
 
 dev_dependencies:
   flutter_test:
